# anansi

./: .coveragerc  .gitignore  .gitmodules  CHANGELOG  CHANGELOG.md  ConsumingAPI.ipynb  LICENSE  README.md  TryAnansi.ipynb  dev.ipynb  pyproject.toml
anansi/: __init__.py  settings.py
anansi/marketdata/: data_brokers.py  handlers.py  indicators.py  klines.py
anansi/share/: db_handlers.py  tools.py
anansi/tradingbot/: classifiers.py  mixins.py  models.py  order_handler.py  stop_handlers.py  trade_brokers.py  traders.py  views.py
anansi_toolkit/: __init__.py  settings.py
anansi_toolkit/marketdata/: data_brokers.py  handlers.py  indicators.py  klines.py  price.py
anansi_toolkit/share/: brokers.py  db_handlers.py  tools.py
anansi_toolkit/tradingbot/: classifiers.py  mixins.py  models.py  orders.py  stop_handlers.py  stoploss.py  trade_brokers.py  traders.py  views.py
backend/: README.md  pyproject.toml
backend/components/: settings.py
backend/components/marketdata/: indicators.py  models.py
backend/components/share/: brokers.py  reporters.py
backend/components/tradingbot/: mixins.py  models.py  orders.py  traders.py  views.py
backend/tests/: test_components.py
cicd/: .gitlab-ci.yml
tests/: test_anansi.py  test_anansi_toolkit.py
